--- a/www/index.html
+++ b/www/index.html
@@ -4,29 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
     <title>Reis & Irvy's</title>
-   <!--  <link rel="stylesheet" href="custom.css" /> 
+     <link rel="stylesheet" href="custom.css" /> 
      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
  <link rel="stylesheet" href="jquery-mobile-froyo-rni.min.css" />
-<link rel="stylesheet" href="jquery.mobile.structure-1.4.0.min.css" />
-<script src="jquery-1.10.2.min.js"></script>
-<script src="jquery.mobile-1.4.0.min.js"></script>-->
-
-
-
-<link rel="shortcut icon" href="../favicon.ico">
-  <link rel="stylesheet" href="custom.css" />
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-	<link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.0.min.css">
-	<link rel="stylesheet" href="_assets/css/jqm-demos.css">
-	<script src="js/jquery.js"></script>
-	<script src="_assets/js/index.js"></script>
-	<script src="js/jquery.mobile-1.4.0.min.js"></script>
-	<style>
-		#custom-border-radius .ui-btn-icon-notext.ui-corner-all {
-			-webkit-border-radius: .3125em;
-			border-radius: .3125em;
-		}
-	</style>
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
 				
   
   <!--  
@@ -276,9 +259,9 @@
     </div>
     <!-- /content -->
     <div data-role="footer" data-position="fixed" data-id="bfoot" class="ui-bar" data-theme="a">
-      <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
+     <!-- <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
       
-      <a id="footout" href="#login" data-role="button" data-icon="delete">Account</a>
+      <a id="footout" href="#login" data-role="button" data-icon="delete">Account</a>-->
     </div>
     <!-- /footer -->
   </div>
@@ -363,7 +346,7 @@
        <a class="ui-btn-right ui-btn ui-icon-info ui-btn-icon-notext ui-btn" href="#info" data-role="button" role="button">Info</a> 
        </li>
        </ul>-->
-       <a href="#home" class="ui-btn ui-btn-inline ui-icon-home ui-btn-icon-left ui-btn-icon-notext">Home</a>
+       <a href="#home" class="ui-btn ui-btn-inline ui-icon-delete ui-btn-icon-left ui-btn-icon-notext">Home</a>
 <a href="#login" class="ui-btn ui-btn-inline ui-icon-user ui-btn-icon-right ui-btn-icon-notext">Account</a>
 <a href="#settings" class="ui-btn ui-btn-inline ui-icon-gear ui-btn-icon-left ui-btn-icon-notext">Settings</a>
 <a href="#info" class="ui-btn ui-btn-inline ui-icon-info ui-btn-icon-right ui-btn-icon-notext">Info</a>
