--- a/www/index.html
+++ b/www/index.html
@@ -85,6 +85,7 @@
 
           <a href="#info" data-role="button" data-icon="info" data-iconpos="notext" data-theme="c" data-inline="true">Info</a>
           
+           <a href="loginout();" data-role="button" data-icon="minus" data-iconpos="notext" data-theme="c" data-inline="true">Logout</a>
 
       </div>
 
@@ -168,6 +169,8 @@
 
           <a href="#info" data-role="button" data-icon="info" data-iconpos="notext" data-theme="c" data-inline="true">Info</a>
 
+
+ <a href="loginout();" data-role="button" data-icon="minus" data-iconpos="notext" data-theme="c" data-inline="true">Logout</a>
        
 
       </div>
@@ -554,7 +557,7 @@
 
         <br/>
 
-        <input id="baseurl" type="text">
+        <input id="baseurl" type="text" value="http://m.reisandirvys.com">
 
             </input>
 
@@ -564,7 +567,7 @@
 
         <br/>
 
-        <input id="view" type="text">
+        <input id="view" type="text" value="frontpage">
 
             </input>
 
@@ -574,7 +577,7 @@
 
         <br/>
 
-        <input id="display" type="text">
+        <input id="display" type="text" value="poll">
 
             </input>
 
